# ChangeLog for sys-apps/file
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.166 2009/02/21 23:37:50 vapier Exp $

*file-5.00-r2 (21 Feb 2009)

  21 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/file-5.00-short-read.patch, +file-5.00-r2.ebuild:
  Add fix from upstream for some short read errors (like with thumb.db
  files).

*file-5.00-r1 (14 Feb 2009)

  14 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/file-5.00-localization.patch, +file-5.00-r1.ebuild:
  Add fix from upstream for unicode issue #258452 by MarisN. Move data files
  to /usr/share/misc/ #246769 by Ulrich Müller.

*file-5.00 (04 Feb 2009)

  04 Feb 2009; Mike Frysinger <vapier@gentoo.org> +file-5.00.ebuild:
  Version bump.

*file-4.26 (17 Sep 2008)

  17 Sep 2008; Mike Frysinger <vapier@gentoo.org> +file-4.26.ebuild:
  Version bump #237173 by Conrad Kostecki.

  18 Jul 2008; Doug Goldstein <cardoe@gentoo.org> -file-4.24.ebuild:
  remove 4.24 so it doesn't go stable

*file-4.25 (17 Jul 2008)

  17 Jul 2008; Doug Goldstein <cardoe@gentoo.org> +file-4.25.ebuild:
  version bump. fix ogg and gzip detection. bugs #219215 & #215499

  29 Mar 2008; Brent Baude <ranger@gentoo.org> file-4.23.ebuild:
  stable ppc64, bug 215058

*file-4.24 (28 Mar 2008)

  28 Mar 2008; Mike Frysinger <vapier@gentoo.org> +file-4.24.ebuild:
  Version bump.

  28 Mar 2008; Brent Baude <ranger@gentoo.org> file-4.23.ebuild:
  stable ppc, bug 215058

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> file-4.23.ebuild:
  Stable for HPPA too.

  07 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> file-4.23.ebuild:
  amd64 stable

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> file-4.23.ebuild:
  alpha/ia64/sparc/x86 stable

*file-4.23 (28 Dec 2007)

  28 Dec 2007; Mike Frysinger <vapier@gentoo.org> +file-4.23.ebuild:
  Version bump.

*file-4.22 (27 Dec 2007)

  27 Dec 2007; Mike Frysinger <vapier@gentoo.org> +file-4.22.ebuild: