@@ -9,7 +9,9 @@ AUX file-5.00-short-read.patch 4299 RMD160 8cfb2f4e10427fe28c54288a9ef2d657844b2
 AUX file-5.00-strtoull-limits.patch 306 RMD160 f0dc6809730f135a30a2e1d3c7302be72eb7800d SHA1 a55f69b5b6770996d93411ab23159fa17099569b SHA256 6555f02d4cb5060aaaf36297bde3fd80dbd4c9ca1daa6b22bb9c9e32c40e951f
 DIST file-4.26.tar.gz 584803 RMD160 e8b84e01d1f43faedfe676afc92c2cba4a01ecdf SHA1 412cdac5cd778d867e2d91a01b09858be1998ec3 SHA256 682f7de5c12d35ff2d9e2ec3c6a753bd5a01e0f7f3110501be0bafef1d5e9654
 DIST file-5.00.tar.gz 600905 RMD160 840170735f4b7478093da46fee521df9b1082bdc SHA1 e58033dfefa44782aa34155751ce88c86c4c1244 SHA256 289bc067d7a2a7e52437428bd0e79df9030028fd13c26e9772ebf1dfc8d9d5c9
+DIST file-5.01.tar.gz 614967 RMD160 69b84996e6eb2fc74d63adf9020b21ee3a07fadd SHA1 0f9759beeb94b85d14123a30a801249f74f902e6 SHA256 3201431a5fecdf88b8058ba292f11d6b37859a2c956e4da0509ff571c8f4932c
 EBUILD file-4.26.ebuild 1583 RMD160 75754d9c2a62072113d918a2645e38a77e4d588e SHA1 22089e4cdefe743257f1c64ebf10c2921905a672 SHA256 ff9d6c745fdab16129a80d06c385ef0edfbd6eb1eee865b7baa8f13662c2a113
 EBUILD file-5.00-r2.ebuild 1920 RMD160 5144e39e6725e3e3a0793d0687957e921b0f6b84 SHA1 da6446c237a16b98729fcc258c7283aae3cc3168 SHA256 658ca1f11b4bedc90b60afde9167f6c1bbe1de69b5267104c45a0595ade37f4c
-MISC ChangeLog 19897 RMD160 bdb0938a417db014bc486b187f8336ed210386db SHA1 02447532a26ad22dfcb4c21a8f773982c2e180f7 SHA256 cfd641026ff6d96749bda904e157d60389e9e99db5ece22066324e8611322a9e
+EBUILD file-5.01.ebuild 1779 RMD160 f2ebfc940d25d328524e93ac66da676f594905f7 SHA1 c3a9f1f779bb0426168e61c292bbff036f358f14 SHA256 bc15dbb648b7641169960b8dcb25de124d132b7748d11a1b5f843e24ed075212
+MISC ChangeLog 20009 RMD160 3dda1a6bc149b20674f28e4f6be12579d7134521 SHA1 1af48461c48b0c28d235c13a682e532b6e549be1 SHA256 1a51d1d53144369b8c438e05950fa060ae4e20e5d0aa85e3e6ad044a79562058
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
