@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.166 2009/02/21 23:37:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.167 2009/05/01 01:56:54 vapier Exp $
+
+*file-5.01 (01 May 2009)
+
+  01 May 2009; Mike Frysinger <vapier@gentoo.org> +file-5.01.ebuild:
+  Version bump.
 
 *file-5.00-r2 (21 Feb 2009)
 
